# campus

./: .gitattributes  .gitignore  .replit  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CampusGUI.ps1  INSTALL.bat  Makefile  README.md  ROADMAP.md  build.ps1  cMakeLists.txt  final_test.txt  license.md  line_ending_test.md  out.txt  replit.md  simple_campus  simple_main.c  test_line_endings.txt
.ccls-cache/@@home@runner@workspace/: @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@limits.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stdarg___gnuc_va_list.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_null.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_size_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_wchar_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@stdarg.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@stddef.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@alloca.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@atomic_wide_counter.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@byteswap.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@dirent.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@dirent_ext.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@endian.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@endianness.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@floatn-common.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@floatn.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@libc-header-start.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@local_lim.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@long-double.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@posix1_lim.h.blob  (+65 more)
.github/: copilot-instructions.md
credentials/: .gitkeep
data/: .gitkeep
demo/: demo_script.bat  system_demo.md  test_scenarios.txt
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  DEPLOYMENT_GUIDE.md  FAQ.md  GUI_DOCUMENTATION.md  INSTALLATION.md  QUICK_START.md  USER_GUIDE.md  USER_MANUAL.md  changeLog.md  release.md  roadMapp.md
gui/: CMakeLists.txt  campus_gui.c
include/: auth.h  campus_security.h  campus_unified.h  config.h  database.h  fileio.h  hpdf_config.h  security.h  send_otp_sms.h  sha256.h  student.h  ui.h  utils.h
lib/: hpdf.exp  hpdf.lib  libcurl.exp
logs/: .gitkeep
performance/: benchmark_tests.c  load_test.c  performance_report.md  run_performance_tests.bat
scripts/: build-automation.py  build.py  fix_headers.py  lint_headers.py  package.py  readme.md  requirements.txt
src/: projectAutomation.json
test-build/: ALL_BUILD.vcxproj  ZERO_CHECK.vcxproj  campus.sln  campus.vcxproj
(+84 files in other folders)
